major internal Archival Storage changes - relying on JMS queues instead of process memory when distributing AIPs and operations; this comes with significant architectural change from "all storages are equal" to "one storage is primary"
besides that:

fixed:
timestamps stored at storage were not equal to the ones in DB (bug was introduced in 1.4.0, storage timestamp were few miliseconds higher than those in DB which caused failures in consistency check and automatic reparations of timestamps at storage)
cron aip checker not checking required number of packages if it reached the last one

added:
option to optimize remote checksum computation